JuanMI/JuanMI/JuanMIParser.py
# Generated from JuanMI.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class JuanMIParser ( Parser ):

    grammarFileName = "JuanMI.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'++'", "':='", 
                     "'>'", "'<'", "'='", "'>='", "'<='", "'/='", "':'", 
                     "'('", "')'", "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "TKN_END_LINE", "TKN_NUMBER", "TKN_STRING", 
                      "TKN_BOOL", "TKN_LIST", "TKN_IF", "TKN_ELSE", "TKN_ELIF", 
                      "TKN_FOR", "TKN_FROM", "TKN_TO", "TKN_WHILE", "TKN_NOT", 
                      "TKN_AND", "TKN_OR", "TKN_FUNCTION", "TKN_RETURN", 
                      "TKN_PRINT", "TKN_TRUE", "TKN_FALSE", "TKN_END", "TKN_BREAK", 
                      "TKN_CONTINUE", "TKN_PLUS", "TKN_MINUS", "TKN_MUL", 
                      "TKN_DIV", "TKN_POW", "TKN_CONCAT", "TKN_ASSIGN", 
                      "TKN_G", "TKN_L", "TKN_EQ", "TKN_GEQ", "TKN_LEQ", 
                      "TKN_NEQ", "TKN_DOTS", "TKN_LBRACKET", "TKN_RBRACKET", 
                      "TKN_LSQUARE", "TKN_RSQUARE", "TKN_COMMA", "TKN_COMMENT", 
                      "TKN_NUMBER_VAL", "TKN_STRING_VAL", "TKN_VAR_ID", 
                      "TKN_WHITESPACE" ]

    RULE_var_type = 0
    RULE_value = 1
    RULE_varDeclaration = 2
    RULE_varAssignment = 3
    RULE_listValue = 4
    RULE_listExpression = 5
    RULE_valueList = 6
    RULE_fullValueList = 7
    RULE_arithmeticExpression = 8
    RULE_stringExpression = 9
    RULE_booleanExpression = 10
    RULE_printExpression = 11
    RULE_expression = 12
    RULE_code = 13
    RULE_program = 14
    RULE_forLoopExpression = 15
    RULE_whileLoopExpression = 16
    RULE_loopCode = 17
    RULE_conditionalExpression = 18
    RULE_elifExpression = 19
    RULE_elseExpression = 20
    RULE_functionDeclaration = 21
    RULE_argList = 22
    RULE_fullArgList = 23
    RULE_functionCall = 24

    ruleNames =  [ "var_type", "value", "varDeclaration", "varAssignment", 
                   "listValue", "listExpression", "valueList", "fullValueList", 
                   "arithmeticExpression", "stringExpression", "booleanExpression", 
                   "printExpression", "expression", "code", "program", "forLoopExpression", 
                   "whileLoopExpression", "loopCode", "conditionalExpression", 
                   "elifExpression", "elseExpression", "functionDeclaration", 
                   "argList", "fullArgList", "functionCall" ]

    EOF = Token.EOF
    TKN_END_LINE=1
    TKN_NUMBER=2
    TKN_STRING=3
    TKN_BOOL=4
    TKN_LIST=5
    TKN_IF=6
    TKN_ELSE=7
    TKN_ELIF=8
    TKN_FOR=9
    TKN_FROM=10
    TKN_TO=11
    TKN_WHILE=12
    TKN_NOT=13
    TKN_AND=14
    TKN_OR=15
    TKN_FUNCTION=16
    TKN_RETURN=17
    TKN_PRINT=18
    TKN_TRUE=19
    TKN_FALSE=20
    TKN_END=21
    TKN_BREAK=22
    TKN_CONTINUE=23
    TKN_PLUS=24
    TKN_MINUS=25
    TKN_MUL=26
    TKN_DIV=27
    TKN_POW=28
    TKN_CONCAT=29
    TKN_ASSIGN=30
    TKN_G=31
    TKN_L=32
    TKN_EQ=33
    TKN_GEQ=34
    TKN_LEQ=35
    TKN_NEQ=36
    TKN_DOTS=37
    TKN_LBRACKET=38
    TKN_RBRACKET=39
    TKN_LSQUARE=40
    TKN_RSQUARE=41
    TKN_COMMA=42
    TKN_COMMENT=43
    TKN_NUMBER_VAL=44
    TKN_STRING_VAL=45
    TKN_VAR_ID=46
    TKN_WHITESPACE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_NUMBER(self):
            return self.getToken(JuanMIParser.TKN_NUMBER, 0)

        def TKN_STRING(self):
            return self.getToken(JuanMIParser.TKN_STRING, 0)

        def TKN_BOOL(self):
            return self.getToken(JuanMIParser.TKN_BOOL, 0)

        def TKN_LIST(self):
            return self.getToken(JuanMIParser.TKN_LIST, 0)

        def getRuleIndex(self):
            return JuanMIParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = JuanMIParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JuanMIParser.TKN_NUMBER) | (1 << JuanMIParser.TKN_STRING) | (1 << JuanMIParser.TKN_BOOL) | (1 << JuanMIParser.TKN_LIST))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringExpression(self):
            return self.getTypedRuleContext(JuanMIParser.StringExpressionContext,0)


        def booleanExpression(self):
            return self.getTypedRuleContext(JuanMIParser.BooleanExpressionContext,0)


        def arithmeticExpression(self):
            return self.getTypedRuleContext(JuanMIParser.ArithmeticExpressionContext,0)


        def listExpression(self):
            return self.getTypedRuleContext(JuanMIParser.ListExpressionContext,0)


        def TKN_VAR_ID(self):
            return self.getToken(JuanMIParser.TKN_VAR_ID, 0)

        def functionCall(self):
            return self.getTypedRuleContext(JuanMIParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return JuanMIParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = JuanMIParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_value)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.stringExpression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.booleanExpression(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.arithmeticExpression(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.listExpression(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.match(JuanMIParser.TKN_VAR_ID)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.functionCall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(JuanMIParser.Var_typeContext,0)


        def TKN_VAR_ID(self):
            return self.getToken(JuanMIParser.TKN_VAR_ID, 0)

        def TKN_ASSIGN(self):
            return self.getToken(JuanMIParser.TKN_ASSIGN, 0)

        def value(self):
            return self.getTypedRuleContext(JuanMIParser.ValueContext,0)


        def getRuleIndex(self):
            return JuanMIParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = JuanMIParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.var_type()
            self.state = 61
            self.match(JuanMIParser.TKN_VAR_ID)
            self.state = 62
            self.match(JuanMIParser.TKN_ASSIGN)
            self.state = 63
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_VAR_ID(self):
            return self.getToken(JuanMIParser.TKN_VAR_ID, 0)

        def TKN_ASSIGN(self):
            return self.getToken(JuanMIParser.TKN_ASSIGN, 0)

        def value(self):
            return self.getTypedRuleContext(JuanMIParser.ValueContext,0)


        def getRuleIndex(self):
            return JuanMIParser.RULE_varAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarAssignment" ):
                listener.enterVarAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarAssignment" ):
                listener.exitVarAssignment(self)




    def varAssignment(self):

        localctx = JuanMIParser.VarAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(JuanMIParser.TKN_VAR_ID)
            self.state = 66
            self.match(JuanMIParser.TKN_ASSIGN)
            self.state = 67
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_LSQUARE(self):
            return self.getToken(JuanMIParser.TKN_LSQUARE, 0)

        def valueList(self):
            return self.getTypedRuleContext(JuanMIParser.ValueListContext,0)


        def TKN_RSQUARE(self):
            return self.getToken(JuanMIParser.TKN_RSQUARE, 0)

        def getRuleIndex(self):
            return JuanMIParser.RULE_listValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListValue" ):
                listener.enterListValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListValue" ):
                listener.exitListValue(self)




    def listValue(self):

        localctx = JuanMIParser.ListValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(JuanMIParser.TKN_LSQUARE)
            self.state = 70
            self.valueList(0)
            self.state = 71
            self.match(JuanMIParser.TKN_RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listValue(self):
            return self.getTypedRuleContext(JuanMIParser.ListValueContext,0)


        def listExpression(self):
            return self.getTypedRuleContext(JuanMIParser.ListExpressionContext,0)


        def TKN_CONCAT(self):
            return self.getToken(JuanMIParser.TKN_CONCAT, 0)

        def getRuleIndex(self):
            return JuanMIParser.RULE_listExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListExpression" ):
                listener.enterListExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListExpression" ):
                listener.exitListExpression(self)



    def listExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JuanMIParser.ListExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_listExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.listValue()
            self._ctx.stop = self._input.LT(-1)
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = JuanMIParser.ListExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_listExpression)
                    self.state = 76
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 77
                    self.match(JuanMIParser.TKN_CONCAT)
                    self.state = 78
                    self.listValue() 
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(JuanMIParser.ValueContext,0)


        def valueList(self):
            return self.getTypedRuleContext(JuanMIParser.ValueListContext,0)


        def TKN_COMMA(self):
            return self.getToken(JuanMIParser.TKN_COMMA, 0)

        def getRuleIndex(self):
            return JuanMIParser.RULE_valueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueList" ):
                listener.enterValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueList" ):
                listener.exitValueList(self)



    def valueList(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JuanMIParser.ValueListContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_valueList, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.value()
            self._ctx.stop = self._input.LT(-1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = JuanMIParser.ValueListContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_valueList)
                    self.state = 87
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 88
                    self.match(JuanMIParser.TKN_COMMA)
                    self.state = 89
                    self.value() 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FullValueListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_WHITESPACE(self):
            return self.getToken(JuanMIParser.TKN_WHITESPACE, 0)

        def valueList(self):
            return self.getTypedRuleContext(JuanMIParser.ValueListContext,0)


        def getRuleIndex(self):
            return JuanMIParser.RULE_fullValueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFullValueList" ):
                listener.enterFullValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFullValueList" ):
                listener.exitFullValueList(self)




    def fullValueList(self):

        localctx = JuanMIParser.FullValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_fullValueList)
        try:
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JuanMIParser.TKN_WHITESPACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(JuanMIParser.TKN_WHITESPACE)
                pass
            elif token in [JuanMIParser.TKN_NOT, JuanMIParser.TKN_TRUE, JuanMIParser.TKN_FALSE, JuanMIParser.TKN_LBRACKET, JuanMIParser.TKN_LSQUARE, JuanMIParser.TKN_NUMBER_VAL, JuanMIParser.TKN_STRING_VAL, JuanMIParser.TKN_VAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.valueList(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_LBRACKET(self):
            return self.getToken(JuanMIParser.TKN_LBRACKET, 0)

        def arithmeticExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuanMIParser.ArithmeticExpressionContext)
            else:
                return self.getTypedRuleContext(JuanMIParser.ArithmeticExpressionContext,i)


        def TKN_RBRACKET(self):
            return self.getToken(JuanMIParser.TKN_RBRACKET, 0)

        def TKN_NUMBER_VAL(self):
            return self.getToken(JuanMIParser.TKN_NUMBER_VAL, 0)

        def TKN_VAR_ID(self):
            return self.getToken(JuanMIParser.TKN_VAR_ID, 0)

        def functionCall(self):
            return self.getTypedRuleContext(JuanMIParser.FunctionCallContext,0)


        def TKN_MUL(self):
            return self.getToken(JuanMIParser.TKN_MUL, 0)

        def TKN_DIV(self):
            return self.getToken(JuanMIParser.TKN_DIV, 0)

        def TKN_MINUS(self):
            return self.getToken(JuanMIParser.TKN_MINUS, 0)

        def TKN_PLUS(self):
            return self.getToken(JuanMIParser.TKN_PLUS, 0)

        def getRuleIndex(self):
            return JuanMIParser.RULE_arithmeticExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpression" ):
                listener.enterArithmeticExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpression" ):
                listener.exitArithmeticExpression(self)



    def arithmeticExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JuanMIParser.ArithmeticExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_arithmeticExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(JuanMIParser.TKN_LBRACKET)
                self.state = 101
                self.arithmeticExpression(0)
                self.state = 102
                self.match(JuanMIParser.TKN_RBRACKET)
                pass

            elif la_ == 2:
                self.state = 104
                self.match(JuanMIParser.TKN_NUMBER_VAL)
                pass

            elif la_ == 3:
                self.state = 105
                self.match(JuanMIParser.TKN_VAR_ID)
                pass

            elif la_ == 4:
                self.state = 106
                self.functionCall()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 115
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = JuanMIParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 109
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 110
                        _la = self._input.LA(1)
                        if not(_la==JuanMIParser.TKN_MUL or _la==JuanMIParser.TKN_DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 111
                        self.arithmeticExpression(6)
                        pass

                    elif la_ == 2:
                        localctx = JuanMIParser.ArithmeticExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_arithmeticExpression)
                        self.state = 112
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 113
                        _la = self._input.LA(1)
                        if not(_la==JuanMIParser.TKN_PLUS or _la==JuanMIParser.TKN_MINUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 114
                        self.arithmeticExpression(5)
                        pass

             
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StringExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_STRING_VAL(self):
            return self.getToken(JuanMIParser.TKN_STRING_VAL, 0)

        def TKN_VAR_ID(self):
            return self.getToken(JuanMIParser.TKN_VAR_ID, 0)

        def TKN_LBRACKET(self):
            return self.getToken(JuanMIParser.TKN_LBRACKET, 0)

        def stringExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuanMIParser.StringExpressionContext)
            else:
                return self.getTypedRuleContext(JuanMIParser.StringExpressionContext,i)


        def TKN_RBRACKET(self):
            return self.getToken(JuanMIParser.TKN_RBRACKET, 0)

        def functionCall(self):
            return self.getTypedRuleContext(JuanMIParser.FunctionCallContext,0)


        def TKN_CONCAT(self):
            return self.getToken(JuanMIParser.TKN_CONCAT, 0)

        def getRuleIndex(self):
            return JuanMIParser.RULE_stringExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpression" ):
                listener.enterStringExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpression" ):
                listener.exitStringExpression(self)



    def stringExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JuanMIParser.StringExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_stringExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 121
                self.match(JuanMIParser.TKN_STRING_VAL)
                pass

            elif la_ == 2:
                self.state = 122
                self.match(JuanMIParser.TKN_VAR_ID)
                pass

            elif la_ == 3:
                self.state = 123
                self.match(JuanMIParser.TKN_LBRACKET)
                self.state = 124
                self.stringExpression(0)
                self.state = 125
                self.match(JuanMIParser.TKN_RBRACKET)
                pass

            elif la_ == 4:
                self.state = 127
                self.functionCall()
                pass

